[package]
name = "rocketchat"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ddp = { path = "../..", features = ["rustls-tls-webpki-roots"] }
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.91"
tokio = { version = "1.23.0", features = ["macros", "rt-multi-thread"] }
